# gmd-object-attribute-inspector

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  mod.json
resources/: docs.json  gen.py  md.md
src/: AttributeDocs.cpp  AttributeDocs.hpp  AttributeEditor.cpp  AttributeEditor.hpp  AttributeListing.cpp  AttributeListing.hpp  DynamicListView.hpp  GameObjectWrapper.cpp  GameObjectWrapper.hpp  InspectorPopup.cpp  InspectorPopup.hpp  JsonTextArea.cpp  JsonTextArea.hpp  NodeExitTracker.cpp  NodeExitTracker.hpp  ObjectAttribute.cpp  ObjectAttribute.hpp  ObjectSelection.hpp  ObjectView.cpp  ObjectView.hpp  TypeContainer.cpp  TypeContainer.hpp  ValueContainer.cpp  ValueContainer.hpp  attr.cpp  attr.hpp  attributes.cpp  attributes.hpp  include.cpp  include.hpp  main.cpp
